--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dejima Technologies - 長崎のプログラミングスクールとWEB開発</title>
+    <title>Dejima Technologies - 福岡のプログラミングスクールとWEB開発</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,18 +23,18 @@
 
     <section class="hero">
         <div class="hero-images">
-            <img src="assets/images/nagasaki_1.jpg" alt="長崎の風景1" class="hero-image" id="hero-image">
+            <img src="assets/images/nagasaki_1.jpg" alt="福岡の風景1" class="hero-image" id="hero-image">
         </div>
         <div class="hero-text">
-            <h2>学ぶ、働く、稼ぐを長崎で</h2>
-            <p>Dejima Technologiesでは、長崎でプログラミングを学び、実践的なスキルを身につけて、エンジニアとして働く機会を提供します。</p>
+            <h2>学ぶ、働く、稼ぐを福岡で</h2>
+            <p>Dejima Technologiesでは、福岡でプログラミングを学び、実践的なスキルを身につけて、エンジニアとして働く機会を提供します。</p>
         </div>
     </section>
 
     <section class="about">
         <div class="container">
             <h2>Dijima BootCamp</h2>
-            <p>Dejima BootCampは、長崎市に拠点を置くオフライン主体のプログラミングスクールです。授業形式は一般的なものとは異なり、以下の特徴があります：</p>
+            <p>Dejima BootCampは、福岡市に拠点を置くオフライン主体のプログラミングスクールです。授業形式は一般的なものとは異なり、以下の特徴があります：</p>
             <ul>
                 <li>入会前に適正試験を受けていただきます。</li>
                 <li>授業は行いません。参考となるURLやリソースを提供し、学習者は自分のペースで学びます。</li>
