--- a/index.html
+++ b/index.html
@@ -34,12 +34,17 @@
     <section class="about">
         <div class="container">
             <h2>Dijima BootCamp</h2>
-            <p>Dejima BootCampは、福岡市に拠点を置くオフライン主体のプログラミングスクールです。授業形式は一般的なものとは異なり、以下の特徴があります：</p>
+            <p>Dejima BootCampは、福岡市に拠点を置くオフライン主体のプログラミングスクールです。授業形式は一般的なものとは異なり、以下の特徴があります</p>
             <ul>
                 <li>入会前に適正試験を受けていただきます。</li>
+                    <ul>
+                        <li><a href="/exam">入会試験はこちら</a></li>
+                    </ul>
                 <li>授業は行いません。参考となるURLやリソースを提供し、学習者は自分のペースで学びます。</li>
                 <li>学習中に生じた質問に対して、個別にサポートを行います。</li>
                 <li>卒業試験に合格後、弊社提携先企業に業務委託として実際のプロジェクトに携わることができます。</li>
+                <li>週1回の面談・ペアプロがあります。</li>
+                <li>料金: 月額40,000円</li>
             </ul>
         </div>
     </section>
