--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="header_container">
             <h1>Dejima Technologies</h1>
         </div>
     </header>
@@ -44,8 +44,41 @@
                 <li>学習中に生じた質問に対して、個別にサポートを行います。</li>
                 <li>卒業試験に合格後、弊社提携先企業に業務委託として実際のプロジェクトに携わることができます。</li>
                 <li>週1回の面談・ペアプロがあります。</li>
-                <li>料金: 月額40,000円</li>
             </ul>
+            <a href="https://x.com/0Cuopen" target="_blank" class="free_consult_button">無料で相談する</a>
+            <h3>他スクールとの比較</h3>
+            <table cellspacing="0" cellpadding="5">
+                <tbody>
+                    <tr>
+                        <td>比較項目</td>
+                        <td>Dejima BootCamp</td>
+                        <td>A社</td>
+                        <td>B社</td>
+                        <td>C社</td>
+                    </tr>
+                    <tr>
+                        <td>料金</td>
+                        <td>月額一律40,000円<br/>エンジニアは向き不向きが顕著に出る職業です。<br/>向いていなければ早めに受講を辞めることも可能です。</td>
+                        <td>657,800〜877,800円</td>
+                        <td>495,000〜877,800円</td>
+                        <td>550,000円</td>
+                    </tr>
+                    <tr>
+                        <td>質問対応体制</td>
+                        <td>△<br/>エンジニアで一番大切な自己解決能力を養うためにも週1の面談と<br/>slack上での簡単なやり取りしかサポートしていません。</td>
+                        <td>◎</td>
+                        <td>◯</td>
+                        <td>◯</td>
+                    </tr>
+                    <tr>
+                        <td>学習時間</td>
+                        <td>プログラミングは習得までの時間に個人差があります。<br/>卒業試験に合格するまで個人のペースで続けることができます。</td>
+                        <td>600時間</td>
+                        <td>12〜24週間</td>
+                        <td>800時間</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </section>
 
@@ -75,16 +108,25 @@
             width: 80%;
             margin: 0 auto;
         }
+        .header_container{
+            width: 92%;
+            margin: 0 auto;
+            color: #555;
+        }
         header {
+            margin-top: 20px;
             position: fixed;
             top: 0;
-            left: 0;
-            width: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 96%;
             background-color: #fff;
-            opacity: 0.5;
             color: #333;
             padding: 10px 0;
             z-index: 10;
+            border-radius: 35px;
+            box-sizing: border-box;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
         }
         header h1 {
             margin: 0;
@@ -140,6 +182,58 @@
             color: white;
             padding: 10px 0;
             text-align: center;
+        }
+        .free_consult_button {
+            display: inline-block;
+            background: linear-gradient(to bottom, #1e90ff, #005f99);
+            color: #ffffff;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 25px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            cursor: pointer;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+            position: relative;
+            overflow: hidden;
+            width: 150px;
+            text-align: center;
+        }
+        .free_consult_button::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 300%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.2);
+            transform: skewX(-45deg);
+            transition: 0.7s;
+        }
+        .free_consult_button:hover::after {
+            left: 100%;
+        }
+        .free_consult_button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        td {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: center;
+            font-size: 20px;
+        }
+        tr:nth-child(odd) {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(even) {
+            background-color: #e0f7ff;
         }
     </style>
 </body>
