--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="header_container">
-            <h1>Dejima Technologies</h1>
+            <h1 class="header_title">Dejima Technologies</h1>
         </div>
     </header>
 
@@ -103,6 +103,10 @@
             padding: 0;
             background-color: #f4f4f9;
             color: #333;
+        }
+        .header_title {
+            font-size: 35px;
+            font-weight: bold;
         }
         .container {
             width: 80%;
